--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
     executor: terraform
     environment:
       AWS_DEFAULT_REGION: "us-east-1" # Optional default region
+      TFE_TOKEN: $TFE_TOKEN
     steps:
       - checkout
       - run:
@@ -27,7 +28,7 @@ jobs:
           command: apk add --no-cache jq
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: terraform init -backend-config="token=$TFE_TOKEN" 
       - run:
           name: Terraform Plan
           command: terraform plan -out=tfplan
@@ -43,7 +44,7 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: terraform init -backend-config="token=$TFE_TOKEN"
       - run:
           name: Terraform Apply
           command: terraform apply -auto-approve
@@ -54,7 +55,7 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: terraform init -backend-config="token=$TFE_TOKEN"
       - run:
           name: Terraform Destroy
           command: terraform destroy -auto-approve
