--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: apk add --no-cache jq
       - run:
           name: Initialize Terraform
-          command: terraform init -backend-config="token=$TFE_TOKEN" 
+          command: terraform init
       - run:
           name: Terraform Plan
           command: terraform plan -out=tfplan
@@ -44,7 +44,7 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init -backend-config="token=$TFE_TOKEN"
+          command: terraform init
       - run:
           name: Terraform Apply
           command: terraform apply -auto-approve
@@ -55,7 +55,7 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init -backend-config="token=$TFE_TOKEN"
+          command: terraform init
       - run:
           name: Terraform Destroy
           command: terraform destroy -auto-approve
