--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     executor: terraform
     environment:
       AWS_DEFAULT_REGION: "us-east-1" # Optional default region
-      TFE_TOKEN: $TFE_TOKEN
+      HCP_API_TOKEN: $HCP_API_TOKEN 
     steps:
       - checkout
       - run:
@@ -27,11 +27,11 @@ jobs:
           name: Install jq
           command: apk add --no-cache jq
       - run:
-          name: Terraform Login
-          command: terraform login
-      - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |
+            terraform init \
+              -backend-config="address=https://hcp.hashicorp.com" \
+              -backend-config="token=$HCP_API_TOKEN"
       - run:
           name: Terraform Plan
           command: terraform plan -out=tfplan
@@ -47,7 +47,10 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |
+            terraform init \
+              -backend-config="address=https://hcp.hashicorp.com" \
+              -backend-config="token=$HCP_API_TOKEN"
       - run:
           name: Terraform Apply
           command: terraform apply -auto-approve
@@ -58,7 +61,10 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |
+            terraform init \
+              -backend-config="address=https://hcp.hashicorp.com" \
+              -backend-config="token=$HCP_API_TOKEN"
       - run:
           name: Terraform Destroy
           command: terraform destroy -auto-approve
