--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,12 @@ jobs:
           command: apk add --no-cache jq
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |  
+            terraform init \  
+                -input=false  
+            displayName: Terraform Init  
+            env:  
+              TF_TOKEN_app_terraform_io: $TFE_TOKEN
       - run:
           name: Terraform Plan
           command: terraform plan -out=tfplan
@@ -45,7 +50,12 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |  
+            terraform init \  
+                -input=false  
+            displayName: Terraform Init  
+            env:  
+              TF_TOKEN_app_terraform_io: $TFE_TOKEN
       - run:
           name: Terraform Apply
           command: terraform apply -auto-approve
@@ -56,7 +66,12 @@ jobs:
       - checkout
       - run:
           name: Initialize Terraform
-          command: terraform init
+          command: |  
+            terraform init \  
+                -input=false  
+            displayName: Terraform Init  
+            env:  
+              TF_TOKEN_app_terraform_io: $TFE_TOKEN
       - run:
           name: Terraform Destroy
           command: terraform destroy -auto-approve
