--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,7 @@ jobs:
     executor: terraform
     environment:
       AWS_DEFAULT_REGION: "us-east-1" # Optional default region
-      HCP_API_TOKEN: $HCP_API_TOKEN
-      TFE_TOKEN: $TFE_TOKEN
+      TF_TOKEN_app_terraform_io: $TF_TOKEN_app_terraform_io
     steps:
       - checkout
       - run:
@@ -32,7 +31,7 @@ jobs:
           command: |
             terraform init -input=false
           environment:
-            TF_TOKEN_app_terraform_io: $TFE_TOKEN
+            TF_TOKEN_app_terraform_io: $TF_TOKEN_app_terraform_io
       - run:
           name: Terraform Plan
           command: terraform plan -out=tfplan
